new pagination design

--- a/src/assets/_app.sass
+++ b/src/assets/_app.sass
@@ -1,2 +1,9 @@
 @import "variables"
 @import "bootstrap"
+
+.page-link
+  background: transparent
+  border-color: var(--primary)
+  &:hover
+    background: $ddark6
+    border-color: initial
