--- a/src/assets/_variables.sass
+++ b/src/assets/_variables.sass
@@ -1,5 +1,43 @@
 $primary: #fe7734
+$secondary: #bebeef
 $black: #333
 
 $ddark6: #24242d
 $ddark5: #49495a
+
+// Hues -----------------------------------
+$syntax-uno: 240
+$syntax-duo: 20
+
+// Uno hue
+$uno-1: hsl($syntax-uno, 60%, 84%)
+$uno-2: hsl($syntax-uno, 40%, 66%)
+$uno-3: hsl($syntax-uno, 20%, 54%)
+$uno-4: hsl($syntax-uno, 15%, 42%)
+$uno-5: hsl($syntax-uno, 10%, 32%)
+
+// Duo hue
+$duo-1: hsl($syntax-duo, 99%, 60%)
+$duo-2: hsl($syntax-duo, 44%, 48%)
+$duo-3: hsl($syntax-duo, 22%, 32%)
+
+$dark: hsl($syntax-uno, 12%, 16%)
+
+
+.uno-1
+  color: $uno-1
+.uno-2
+  color: $uno-2
+.uno-3
+  color: $uno-3
+.uno-4
+  color: $uno-4
+.uno-5
+  color: $uno-5
+
+.duo-1
+ color: $duo-1
+.duo-2
+ color: $duo-2
+.duo-3
+ color: $duo-3
